# dbt-model-diff

./: .gitignore  Build_Locally.md  Makefile  README.md  requirements.txt
Postgress_Docker/: docker-compose.yaml
dbt-model-diff/: README.md  pyproject.toml  pytest.ini
dbt-model-diff/dbt_model_diff/: __init__.py  cli.py
dbt-model-diff/dbt_model_diff/adapters/: __init__.py  base.py  postgres.py  redshift.py
dbt-model-diff/dbt_model_diff/core/: __init__.py  dbt_profiles.py  dbt_runner.py  diff_flow.py  manifest.py  subprocess_utils.py  types.py  util.py
dbt-model-diff/dbt_model_diff/formatters/: __init__.py  json_fmt.py  markdown_fmt.py  rich_fmt.py
dbt-model-diff/tests/integration/: test_postgres_e2e.py
dbt/dbt_warehouse_demo_with_docs/: .user.yml  README.md  dbt_project.yml  profiles.yml
dbt/dbt_warehouse_demo_with_docs/macros/: generate_schema_name.sql
dbt/dbt_warehouse_demo_with_docs/models/: schema.yml
dbt/dbt_warehouse_demo_with_docs/models/core/: dim_customers.sql  dim_products.sql  fct_orders.sql
dbt/dbt_warehouse_demo_with_docs/models/stage/: stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql
dbt/dbt_warehouse_demo_with_docs/prompts/: column.md.j2  model.md.j2
dbt/dbt_warehouse_demo_with_docs/seeds/: customers.csv  order_items.csv  orders.csv  products.csv
